<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeRecords</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="database_manger">DataBase</string>
    <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-9936228982889305/9868792075</string>

    <!-- Sign up Login Strings -->

    <string name="text_motto_signup_login">Every moment is unique why not store it ?</string>
    <string name="logo_image_signup_login">Logo of liferecords</string>
    <string name="welcome_text_login">Welcome back to LifeRecords!</string>
    <string name="welcome_text_signup">Welcome to LifeRecords!</string>

    <!-- Sign Up screen Strings -->
    <string name="screen_signup_name_hint">Name</string>
    <string name="screen_signup_email_hint">Email</string>
    <string name="screen_signup_password_hint">Password</string>
    <string name="screen_signup_password_repeat_hint">Password again</string>
    <string name="screen_signup_button_signup">Sign Up</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_blank_email">enter an email</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_title">Please wait.</string>
    <string name="progress_message">Signing up. Please wait.</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- FeedBack Fragment -->
    <string name="edittext_hint_feedback_subject">Subject</string>
    <string name="edittext_hint_feeedback_content">Message</string>
    <string name="button_feedback_send">Send feedback</string>
    <string name="error_blank_subject">enter a subject</string>
    <string name="error_blank_content">enter a message</string>

    <!-- login screen -->
    <string name="username_signup">Username</string>
    <string name="password_signup">Password</string>
    <string name="login_button">Log in</string>
    <string name="logout_menu">Log out</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_sign_up_or_login">SignUpOrLoginActivity</string>
    <string name="signup_button">Sign Up</string>

    <!-- Main Activity -->
    <string name="location_alert_dialog_title">Location aint working</string>
    <string name="location_alert_dialog_message">would you change location to on ? </string>
    <string name="location_alert_dialog_positive">OK</string>
    <string name="location_alert_dialog_negative">Cancel</string>
    <string name="menu_day_or_week_text">Day</string>
    <string name="menu_dates_text">Dates</string>
    <string name="picture_battery">Battery status</string>
    <string name="details_motion_standing">Standing</string>
    <string name="details_motion_running">Running</string>
    <string name="details_motion_cycling">Cycling</string>
    <string name="details_motion_walking">Walking</string>
    <string name="details_motion_driving">Driving</string>
    <string name="details_type_airport">Airport</string>
    <string name="details_type_bus">Transportation station</string>
    <string name="details_type_park">Park</string>
    <string name="details_type_parking">Car park</string>
    <string name="details_type_road">Road</string>
    <string name="group_map_icon">Map of the places</string>
    <string name="details_image_type">Image of type of place</string>
   

    <!-- Map Activity -->
    <string name="image_icon_map_desc">Icon Map</string>
    <string name="image_motion_map_desc">Motion Picture</string>
    <string name="image_battery_map_desc">Battery status picture</string>
    <string name="image_streetview_map_desc">StreetView Picture</string>

    <!-- Settings Activity -->
    <string name="settings_sample_instance_category_title">First</string>
    <string name="settings_sample_instance_list_title">Sample Timing</string>

    <!-- NavigationDrawer -->
    <string name="navigation_drawer_desc_open">Open navigation drawer</string>
    <string name="navigation_drawer_desc_close">Close navigation drawer</string>
    <string name="navigation_icon_description">Icon of navigation subject</string>
    <!-- Privacy Policy Fragment -->

</resources>