<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regi_backgorund"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.liferecords.application.SignUpActivity" >

    <TextView
        android:id="@+id/welcome_text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="16dp"
        android:text="@string/welcome_text_signup" />

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/edittext_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_username_picture"
            android:ems="10"
            android:hint="@string/screen_signup_name_hint"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/white_cursor"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/edittext_signup_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:drawableLeft="@drawable/ic_password_picture"
            android:ems="10"
            android:hint="@string/screen_signup_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/white_cursor"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/edittext_signup_pw_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:drawableLeft="@drawable/ic_password_picture"
            android:ems="10"
            android:hint="@string/screen_signup_password_repeat_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/white_cursor"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/register_button"
            android:text="@string/screen_signup_button_signup" />
    </LinearLayout>

</RelativeLayout>