<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/edittext_subject"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/feedback_subject_background"
        android:hint="@string/edittext_hint_feedback_subject"
        android:inputType="textEmailSubject"
        android:maxLength="50"
        android:paddingLeft="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edittext_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/feedback_subject_background"
        android:hint="@string/edittext_hint_feeedback_content"
        android:inputType="textCapCharacters|textMultiLine"
        android:lines="5"
        android:maxLength="500"
        android:maxLines="10"
        android:minLines="4"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/button_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/register_button"
        android:text="@string/button_feedback_send" />

</LinearLayout>