<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regi_backgorund"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.liferecords.application.LoginActivity" >

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/editText_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/phone_register_edittext"
            android:ems="10"
            android:drawableLeft="@drawable/ic_username_picture"
            android:inputType="text"
            android:hint="@string/username_signup"
            android:paddingLeft="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/phone_register_edittext"
            android:ems="10"
            android:drawableLeft="@drawable/ic_password_picture"
            android:hint="@string/password_signup"
            android:inputType="textPassword"
            android:paddingLeft="10dip" />

        <Button
            android:id="@+id/button_loginscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/register_button"
            android:text="@string/login_button" />
    </LinearLayout>

</RelativeLayout>